<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/imageDeal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_standard"
            android:layout_marginTop="@dimen/text_margin_standard"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/image_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_standard"
                android:layout_marginTop="@dimen/text_margin_standard"
                android:text="@string/textTitle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_large" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_standard"
                android:layout_marginTop="@dimen/text_margin_standard"
                android:textColor="@android:color/black"
                android:text="@string/textDescription"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin_standard"
                android:layout_marginTop="@dimen/text_margin_standard"
                android:text="@string/textPrice"
                android:layout_gravity="end"
                android:textSize="@dimen/text_price"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginEnd="@dimen/text_margin_standard"
        android:layout_below="@id/info"/>

</RelativeLayout>